--- a/#source/_header.html
+++ b/#source/_header.html
@@ -1,21 +1,22 @@
 <header class="header">
 	<div class="container">
-		<div class="header__">
-			<!-- 
-				html меню с иконкой бургера
-				<div class="header__menu menu">
-					<div class="menu__icon icon-menu">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<nav class="menu__body">
-						<ul class="menu__list">
-							<li><a href="" class="menu__link"></a></li>
-						</ul>
-					</nav>
+		<div class="header__content">
+			<a href="#" class="header__logo"></a>
+			<div class="header__menu menu">
+				<div class="menu__icon icon-menu">
+					<span></span>
+					<span></span>
+					<span></span>
 				</div>
-			-->
+				<nav class="menu__body">
+					<ul class="menu__list">
+						<li><a href="" class="menu__link"></a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="header__search">
+				<input type="search">
+			</div>
 		</div>
 	</div>
 </header>
