--- a/#source/_header.html
+++ b/#source/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container">
 		<div class="header__content">
-			<a href="#" class="header__logo"></a>
+			<a href="#" class="header__logo"><img src="img/logo/logo.png" alt="Logo"></a>
 			<div class="header__menu menu">
 				<div class="menu__icon icon-menu">
 					<span></span>
@@ -10,13 +10,27 @@
 				</div>
 				<nav class="menu__body">
 					<ul class="menu__list">
-						<li><a href="" class="menu__link"></a></li>
+						<li><a href="" class="menu__link">HOME</a></li>
+						<li><a href="" class="menu__link">ABOUT</a></li>
+						<li><a href="" class="menu__link">SERVICES</a></li>
+						<li>
+							<a href="" class="menu__link">PORTFOLIO</a>
+							<ul class="menu__sub-list">
+								<li><a href="" class="menu__sub-link">Portfolio 2 column page</a></li>
+								<li><a href="" class="menu__sub-link">Portfolio 3 column page</a></li>
+								<li><a href="" class="menu__sub-link">Portfolio 4 column page</a></li>
+							</ul>
+						</li>
+						<li><a href="" class="menu__link">BLOG</a></li>
+						<li><a href="" class="menu__link">FEATURES</a></li>
+						<li><a href="" class="menu__link">CONTACTS</a></li>
 					</ul>
 				</nav>
 			</div>
-			<div class="header__search">
-				<input type="search">
-			</div>
+			<form action="" class="header__search search">
+				<input type="text" placeholder="Search the site" class="search-input">
+				<button type="submit" class="search-btn"></button>
+			</form>
 		</div>
 	</div>
 </header>
