--- a/#source/_header.html
+++ b/#source/_header.html
@@ -14,11 +14,18 @@
 						<li><a href="" class="menu__link">ABOUT</a></li>
 						<li><a href="" class="menu__link">SERVICES</a></li>
 						<li>
-							<a href="" class="menu__link">PORTFOLIO</a>
+							<a href="" class="menu__link menu__link-s"> <span id="toggle-menu"
+									class="menu__link-3 _icon-arrow-down"></span>
+								PORTFOLIO</a>
+							<span class="menu__arrow"></span>
+							<span class="triangle triangle-menu"></span>
 							<ul class="menu__sub-list">
-								<li><a href="" class="menu__sub-link">Portfolio 2 column page</a></li>
-								<li><a href="" class="menu__sub-link">Portfolio 3 column page</a></li>
-								<li><a href="" class="menu__sub-link">Portfolio 4 column page</a></li>
+								<li><a href="" class="menu__sub-link"><span class="_icon-arrow-right"></span>Portfolio 2 column
+										page</a></li>
+								<li><a href="" class="menu__sub-link"><span class="_icon-arrow-right"></span>Portfolio 3 column
+										page</a></li>
+								<li><a href="" class="menu__sub-link"><span class="_icon-arrow-right"></span>Portfolio 4 column
+										page</a></li>
 							</ul>
 						</li>
 						<li><a href="" class="menu__link">BLOG</a></li>
@@ -28,8 +35,9 @@
 				</nav>
 			</div>
 			<form action="" class="header__search search">
+				<span class="triangle triangle-search"></span>
 				<input type="text" placeholder="Search the site" class="search-input">
-				<button type="submit" class="search-btn"></button>
+				<div class="search-btn"></div>
 			</form>
 		</div>
 	</div>
