--- a/#source/_header.html
+++ b/#source/_header.html
@@ -14,17 +14,16 @@
 						<li><a href="" class="menu__link">ABOUT</a></li>
 						<li><a href="" class="menu__link">SERVICES</a></li>
 						<li>
-							<a href="" class="menu__link menu__link-s"> <span id="toggle-menu"
-									class="menu__link-3 _icon-arrow-down"></span>
-								PORTFOLIO</a>
-							<span class="menu__arrow"></span>
+							<span class="arrow arrow-down arrow-down-1"></span>
+							<a href="" class="menu__link menu__link-s">PORTFOLIO</a>
+							<span class="arrow arrow-down arrow-down-2"></span>
 							<span class="triangle triangle-menu"></span>
 							<ul class="menu__sub-list">
-								<li><a href="" class="menu__sub-link"><span class="_icon-arrow-right"></span>Portfolio 2 column
+								<li><a href="" class="menu__sub-link"><span class="arrow arrow-right"></span>Portfolio 2 column
 										page</a></li>
-								<li><a href="" class="menu__sub-link"><span class="_icon-arrow-right"></span>Portfolio 3 column
+								<li><a href="" class="menu__sub-link"><span class="arrow arrow-right"></span>Portfolio 3 column
 										page</a></li>
-								<li><a href="" class="menu__sub-link"><span class="_icon-arrow-right"></span>Portfolio 4 column
+								<li><a href="" class="menu__sub-link"><span class="arrow arrow-right"></span>Portfolio 4 column
 										page</a></li>
 							</ul>
 						</li>
