--- a/#source/_js.html
+++ b/#source/_js.html
@@ -1,3 +1,4 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="js/slick.min.js"></script>
 <!-- <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script> -->
 <script src="js/main.min.js"></script>
