--- a/#source/index.html
+++ b/#source/index.html
@@ -16,7 +16,25 @@
 	<div class="wrapper">
 		@@include('_header.html')
 		<main class="page">
-
+			<section class="home__slider">
+				<div class="home__slider-item slider-home">
+					<div class="slider-home__title">VESTIBULUM</div>
+					<div class="slider-home__subtitle">Maecenas tincidunt, augue et rutrum condimentum, libero lectus mattis
+						orci, ut commodo.</div>
+				</div>
+				<div class="home__slider-item slider-home">
+					<div class="slider-home__title">conscientia</div>
+					<div class="slider-home__subtitle">Maecenas tincidunt, augue et rutrum condimentum, libero lectus mattis
+						orci, ut commodoMaecenas tinciduntMaecenas tincidunt.</div>
+				</div>
+				<div class="home__slider-item slider-home">
+					<div class="slider-home__title">adoption</div>
+					<div class="slider-home__subtitle">MaecMaecenas tincidunMaecenas tincidunttenas tincidunt, augue et
+						rutrum condimentum, libero lectus mattis
+						orci, ut commodoMaecenas tinciduntMaecenas tinciduntMaecenas tinciduntMaecenas tinciduntMaecenas
+						tinciduntMaecenas tinciduntMaecenas tincidunt.</div>
+				</div>
+			</section>
 		</main>
 		@@include('_footer.html')
 	</div>
