--- a/#source/index.html
+++ b/#source/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="wrapper">
 		@@include('_header.html')
-		<main class="page">
+		<main class="home">
 			<section class="home__slider">
 				<div class="home__slider-item slider-home">
 					<div class="slider-home__title">VESTIBULUM</div>
@@ -33,6 +33,56 @@
 						rutrum condimentum, libero lectus mattis
 						orci, ut commodoMaecenas tinciduntMaecenas tinciduntMaecenas tinciduntMaecenas tinciduntMaecenas
 						tinciduntMaecenas tinciduntMaecenas tincidunt.</div>
+				</div>
+			</section>
+			<section class="home__services">
+				<div class="container">
+					<div class="home__services-info info-services">
+						<div class="info-services__text text-services">
+							<div class="text-services__title">Some of our top services</div>
+							<div class="text-services__subtitle">Ut eleifend libero sed neque rhoncus consequat. Maecenas
+								tincidunt, augue et rutrum condimentum, libero lectus mattis orci, ut commodo. </div>
+						</div>
+						<a href="" class="info-services__btn btn">VIEW MORE</a>
+					</div>
+					<div class="home__services-items">
+						<div class="home__services-column">
+							<div class="home__services-item item-services">
+								<img src="img/icons/thumbs-up.svg" alt="Thumb Up" class="img-svg">
+								<div class="item-services__title">SUSPENDISSE </div>
+								<div class="item-services__text"> Quisque id tellus quis risus vehicula vehicula ut turpis. In
+									eros nulla, placerat vitae at, vehicula ut nunc. </div>
+								<a href="" class="item-services__btn btn btn-services">read more</a>
+							</div>
+						</div>
+						<div class="home__services-column">
+							<div class="home__services-item item-services">
+								<img src="img/icons/key.svg" alt="Key" class="img-svg">
+								<div class="item-services__title">MAECENAS </div>
+								<div class="item-services__text">Ut eleifend libero sed neque rhoncus consequat. Maecenas
+									tincidunt, augue et rutrum condimentum, libero lectus mattis orci, ut commodo.</div>
+								<a href="" class="item-services__btn btn btn-services">read more</a>
+							</div>
+						</div>
+						<div class="home__services-column">
+							<div class="home__services-item item-services">
+								<img src="img/icons/flag.svg" alt="Flag" class="img-svg">
+								<div class="item-services__title">ALIQUAM </div>
+								<div class="item-services__text">Vivamus eget ante bibendum arcu vehicula ultricies. Integer
+									venenatis mattis nisl, vitae pulvinar dui tempor non. </div>
+								<a href="" class="item-services__btn btn btn-services">read more</a>
+							</div>
+						</div>
+						<div class="home__services-column">
+							<div class="home__services-item item-services">
+								<img src="img/icons/flask.svg" alt="Flask" class="img-svg">
+								<div class="item-services__title">HABITASSE </div>
+								<div class="item-services__text">Astehicula ultricies. Integer venenatis mattis nisl, vitae
+									pulvinar dui tempor non. </div>
+								<a href="" class="item-services__btn btn btn-services">read more</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
