new section done!

--- a/#source/index.html
+++ b/#source/index.html
@@ -85,6 +85,68 @@
 					</div>
 				</div>
 			</section>
+			<section class="home__advantages">
+				<div class="container">
+					<div class="home__advantages-title">WHY MODUS VERSUS?</div>
+					<div class="home__advantages-subtitle">Capacitance cascading integer reflective interface data
+						development high bus cache dithering transponder. </div>
+					<div class="home__advantages-screens">
+						<div class="home__advantages-screens-1"><img src="img/home/image-left.jpg" alt="Image left"></div>
+						<div class="home__advantages-screens-2"><img src="img/home/image-center.jpg" alt="Image center"></div>
+						<div class="home__advantages-screens-3"><img src="img/home/image-right.jpg" alt="Image right"></div>
+						<!-- <img src="img/home/image-left.jpg" alt="Image left">
+						<img src="img/home/image-center.jpg" alt="Image center">
+						<img src="img/home/image-right.jpg" alt="Image right"> -->
+					</div>
+					<div class="home__advantages-info info-advantages">
+						<div class="info-advantages__item item-strengths">
+							<div class="item-strengths__title section-title">Why Choose Us ?</div>
+							<div class="item-strengths__text">
+								<ul class="item-strengths__list">
+									<li><span class="list-arrow"></span>Quisque at massa ipsum</li>
+									<li><span class="list-arrow"></span>Maecenas a lorem augue, egestas</li>
+									<li><span class="list-arrow"></span>Cras vitae felis at lacus eleifend</li>
+									<li><span class="list-arrow"></span>Etiam auctor diam pellentesque</li>
+									<li><span class="list-arrow"></span>Nulla ac massa at dolor</li>
+									<li><span class="list-arrow"></span>Condimentum eleifend vitae vitae</li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="info-advantages__item item-charts">
+							<div class="item-charts__text">
+								Curabitur quis nisl in leo euismod venenatis eu in diam. Etiam auctor diam pellentesque lectus
+								<a href="">vehicula mattis</a>. Nulla ac massa at dolor condimentum eleifend vitae vitae urna.
+							</div>
+							<div class="item-charts__body">
+								<div class="item-charts__item">
+									<div class="item-charts__circle circles" id="circles-suspendisse"></div>
+									<div class="item-charts__title">SUSPENDISSE</div>
+								</div>
+								<div class="item-charts__item">
+									<div class="item-charts__circle circles" id="circles-maecenas"></div>
+									<div class="item-charts__title">MAECENAS</div>
+								</div>
+								<div class="item-charts__item">
+									<div class="item-charts__circle circles" id="circles-aliquam"></div>
+									<div class="item-charts__title">ALIQUAM</div>
+								</div>
+								<div class="item-charts__item">
+									<div class="item-charts__circle circles" id="circles-habitasse"></div>
+									<div class="item-charts__title">HABITASSE</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="info-advantages__item item-review">
+							<div class="item-review__title section-title">What Client’s Say ?</div>
+							<div class="item-review__text">Curabitur quis nisl in leo euismod venenatis eu in diam. Etiam
+								auctor diam pellentesque lectus vehicula mattis. Nulla ac massa at dolor condimentum</div>
+							<div class="item-review__author">Jhon Doe</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('_footer.html')
 	</div>
