another slider and footer

--- a/#source/index.html
+++ b/#source/index.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/main/css">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
@@ -94,9 +95,6 @@
 						<div class="home__advantages-screens-1"><img src="img/home/image-left.jpg" alt="Image left"></div>
 						<div class="home__advantages-screens-2"><img src="img/home/image-center.jpg" alt="Image center"></div>
 						<div class="home__advantages-screens-3"><img src="img/home/image-right.jpg" alt="Image right"></div>
-						<!-- <img src="img/home/image-left.jpg" alt="Image left">
-						<img src="img/home/image-center.jpg" alt="Image center">
-						<img src="img/home/image-right.jpg" alt="Image right"> -->
 					</div>
 					<div class="home__advantages-info info-advantages">
 						<div class="info-advantages__item item-strengths">
@@ -112,7 +110,6 @@
 								</ul>
 							</div>
 						</div>
-
 						<div class="info-advantages__item item-charts">
 							<div class="item-charts__text">
 								Curabitur quis nisl in leo euismod venenatis eu in diam. Etiam auctor diam pellentesque lectus
@@ -137,7 +134,6 @@
 								</div>
 							</div>
 						</div>
-
 						<div class="info-advantages__item item-review">
 							<div class="item-review__title section-title">What Client’s Say ?</div>
 							<div class="item-review__text">Curabitur quis nisl in leo euismod venenatis eu in diam. Etiam
@@ -147,6 +143,44 @@
 					</div>
 				</div>
 			</section>
+			<div class="home__clients">
+				<div class="container">
+					<div class="home__clients-header header-clients">
+						<div class="header-clients__title section-title">Our Happy Clients</div>
+						<div class="header-clients__divider"></div>
+						<div class="header-clients__btn"></div>
+					</div>
+					<div class="home__clients-body body-clients">
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+						<div class="body-clients__item">
+							<img src="img/logo/jquery_logo.png" alt="JQuery Logo">
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		@@include('_footer.html')
 	</div>
