--- a/#source/_footer.html
+++ b/#source/_footer.html
@@ -1,3 +1,62 @@
 <footer class="footer">
-
+	<div class="footer__body">
+		<div class="container">
+			<div class="footer__items">
+				<div class="footer__item item-description">
+					<a href="#" class="footer__logo"><img src="img/logo/logo.png" alt="Logo"></a>
+					<div class="item-description__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
+						euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et,
+						interdum nec .</div>
+					<div class="item-description__contacts">Phone:<a href="tel:+18225695896">182 2569 5896</a></div>
+					<div class="item-description__contacts">e-mail:<a href="mailto:info@modu.versus">info@modu.versus</a>
+					</div>
+				</div>
+				<div class="footer__item item-nav">
+					<div class="item-nav__company">
+						<div class="item-nav__title">Company</div>
+						<ul class="item-nav__list">
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">About</a></li>
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">FAQ</a></li>
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">Contact</a></li>
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">Terms</a></li>
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">Privacy</a></li>
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">Testimonials</a></li>
+						</ul>
+					</div>
+					<div class="item-nav__community">
+						<div class="item-nav__title">Community</div>
+						<ul class="item-nav__list">
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">Blog</a></li>
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">Forum</a></li>
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">Support</a></li>
+							<li><span class="arrow arrow-right"></span><a href="" class="item-nav__link">Newsletter</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="footer__item item-blog">
+					<div class="item-blog__title">from the <a href="">BLOG</a></div>
+					<div class="item-blog__el el-blog">
+						<div class="el-blog__img"><img src="img/items/pic.png" alt="Picture"></div>
+						<div class="el-blog__info">
+							<div class="el-blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+							<div class="el-blog__data">26 May, 2013</div>
+						</div>
+					</div>
+					<div class="item-blog__el el-blog">
+						<div class="el-blog__img"><img src="img/items/pic.png" alt="Picture"></div>
+						<div class="el-blog__info">
+							<div class="el-blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+							<div class="el-blog__data">26 May, 2013</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer__copy">
+		<div class="container">
+			<div class="footer__copy-title">2013 ModusVersus</div>
+			<div class="footer__copy-social social"></div>
+		</div>
+	</div>
 </footer>
