--- a/#source/_js.html
+++ b/#source/_js.html
@@ -1,5 +1,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/circles.min.js"></script>
+<script src="https://kit.fontawesome.com/7a2e0e27d3.js" crossorigin="anonymous"></script>
 <!-- <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script> -->
 <script src="js/main.min.js"></script>
