--- a/#source/_footer.html
+++ b/#source/_footer.html
@@ -55,8 +55,15 @@
 	</div>
 	<div class="footer__copy">
 		<div class="container">
-			<div class="footer__copy-title">2013 ModusVersus</div>
-			<div class="footer__copy-social social"></div>
+			<div class="footer__footer">
+				<div class="footer__copy-title">2013 ModusVersus</div>
+				<div class="footer__copy-social social">
+					<a href="" class="social__item fab fa-facebook-f"></a>
+					<a href="" class="social__item fab fa-google"></a>
+					<a href="" class="social__item fab fa-twitter"></a>
+					<a href="" class="social__item fas fa-rss"></a>
+				</div>
+			</div>
 		</div>
 	</div>
 </footer>
