new sections and their adaptive

--- a/#source/_header.html
+++ b/#source/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container">
 		<div class="header__content">
-			<a href="#" class="header__logo"><img src="img/logo/logo.png" alt="Logo"></a>
+			<a href="index.html" class="header__logo"><img src="img/logo/logo.png" alt="Logo"></a>
 			<div class="header__menu menu">
 				<div class="menu__icon icon-menu">
 					<span></span>
@@ -10,26 +10,32 @@
 				</div>
 				<nav class="menu__body">
 					<ul class="menu__list">
-						<li><a href="" class="menu__link">HOME</a></li>
-						<li><a href="" class="menu__link">ABOUT</a></li>
-						<li><a href="" class="menu__link">SERVICES</a></li>
+						<li class=""><a href="index.html" class="menu__link link-1">HOME</a></li>
+						<li><a href="about-as.html" class="menu__link link-2">ABOUT</a></li>
+						<li><a href="services.html" class="menu__link link-3">SERVICES</a></li>
 						<li>
 							<span class="arrow arrow-down arrow-down-1"></span>
-							<a href="" class="menu__link menu__link-s">PORTFOLIO</a>
+							<a href="portfolio.html" class="menu__link menu__link-s link-4">PORTFOLIO</a>
 							<span class="arrow arrow-down arrow-down-2"></span>
 							<span class="triangle triangle-menu"></span>
 							<ul class="menu__sub-list">
-								<li><a href="" class="menu__sub-link"><span class="arrow arrow-right"></span>Portfolio 2 column
+								<li><a href="portfolio-two.html" class="menu__sub-link link-4-1"><span
+											class="arrow arrow-right"></span>Portfolio
+										2 column
 										page</a></li>
-								<li><a href="" class="menu__sub-link"><span class="arrow arrow-right"></span>Portfolio 3 column
+								<li><a href="portfolio-three.html" class="menu__sub-link link-4-2"><span
+											class="arrow arrow-right"></span>Portfolio
+										3 column
 										page</a></li>
-								<li><a href="" class="menu__sub-link"><span class="arrow arrow-right"></span>Portfolio 4 column
+								<li><a href="portfolio-four.html" class="menu__sub-link link-4-3"><span
+											class="arrow arrow-right"></span>Portfolio
+										4 column
 										page</a></li>
 							</ul>
 						</li>
-						<li><a href="" class="menu__link">BLOG</a></li>
-						<li><a href="" class="menu__link">FEATURES</a></li>
-						<li><a href="" class="menu__link">CONTACTS</a></li>
+						<li><a href="blog.html" class="menu__link link-5">BLOG</a></li>
+						<li><a href="features.html" class="menu__link link-6">FEATURES</a></li>
+						<li><a href="contacts.html" class="menu__link link-7">CONTACTS</a></li>
 					</ul>
 				</nav>
 			</div>
