--- a/#source/index.html
+++ b/#source/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Главная</title>
+	<title>Home</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="wrapper">
-		@@include('_header.html')
+		@@include('_header.html',{})
 		<main class="home">
 			<section class="home__slider">
 				<div class="home__slider-item slider-home">
@@ -181,10 +181,10 @@
 				</div>
 			</div>
 		</main>
-		@@include('_footer.html')
+		@@include('_footer.html',{})
 	</div>
-	@@include('_popup.html')
-	@@include('_js.html')
+	@@include('_popup.html',{})
+	@@include('_js.html',{})
 </body>
 
 </html>
