portfolio block with a different number of columns

--- a/#source/services.html
+++ b/#source/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 	<title>Services</title>
@@ -21,7 +21,7 @@
 					<div class="block__header-content">
 						<div class="block__header-name">SERVICES</div>
 						<div class="block__header-links">
-							<a href="index.html">Home</a> / <a href="about-as.html">Services</a>
+							<a href="index.html">Home</a> / <a href="services.html">Services</a>
 						</div>
 					</div>
 				</div>
