--- a/#source/_header.html
+++ b/#source/_header.html
@@ -15,19 +15,19 @@
 						<li><a href="services.html" class="menu__link link-3">SERVICES</a></li>
 						<li>
 							<span class="arrow arrow-down arrow-down-1"></span>
-							<a href="portfolio.html" class="menu__link menu__link-s link-4">PORTFOLIO</a>
+							<a href="portfolio-onecol.html" class="menu__link menu__link-s link-4">PORTFOLIO</a>
 							<span class="arrow arrow-down arrow-down-2"></span>
 							<span class="triangle triangle-menu"></span>
 							<ul class="menu__sub-list">
-								<li><a href="portfolio-two.html" class="menu__sub-link link-4-1"><span
+								<li><a href="portfolio-twocol.html" class="menu__sub-link link-4-1"><span
 											class="arrow arrow-right"></span>Portfolio
 										2 column
 										page</a></li>
-								<li><a href="portfolio-three.html" class="menu__sub-link link-4-2"><span
+								<li><a href="portfolio-threecol.html" class="menu__sub-link link-4-2"><span
 											class="arrow arrow-right"></span>Portfolio
 										3 column
 										page</a></li>
-								<li><a href="portfolio-four.html" class="menu__sub-link link-4-3"><span
+								<li><a href="portfolio-fourcol.html" class="menu__sub-link link-4-3"><span
 											class="arrow arrow-right"></span>Portfolio
 										4 column
 										page</a></li>
