single project block and contacts

--- a/#source/portfolio-onecol.html
+++ b/#source/portfolio-onecol.html
@@ -52,8 +52,9 @@
 												neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
 												turpis egestas.</div>
 											<div class="item-tabs__action">
-												<a href="#" class="item-tabs__link">www.project.dom</a>
-												<div class="item-tabs__btn btn btn-portfolio">VIEW DETAILS</div>
+												<a href="portfolio-singleproj.html" class="item-tabs__link">www.project.dom</a>
+												<a href="portfolio-singleproj.html" class="item-tabs__btn btn btn-portfolio">VIEW
+													DETAILS</a>
 											</div>
 										</div>
 									</div>
@@ -72,8 +73,9 @@
 												neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
 												turpis egestas.</div>
 											<div class="item-tabs__action">
-												<a href="#" class="item-tabs__link">www.project.dom</a>
-												<div class="item-tabs__btn btn btn-portfolio">VIEW DETAILS</div>
+												<a href="portfolio-singleproj.html" class="item-tabs__link">www.project.dom</a>
+												<a href="portfolio-singleproj.html" class="item-tabs__btn btn btn-portfolio">VIEW
+													DETAILS</a>
 											</div>
 										</div>
 									</div>
@@ -92,8 +94,9 @@
 												neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
 												turpis egestas.</div>
 											<div class="item-tabs__action">
-												<a href="#" class="item-tabs__link">www.project.dom</a>
-												<div class="item-tabs__btn btn btn-portfolio">VIEW DETAILS</div>
+												<a href="portfolio-singleproj.html" class="item-tabs__link">www.project.dom</a>
+												<a href="portfolio-singleproj.html" class="item-tabs__btn btn btn-portfolio">VIEW
+													DETAILS</a>
 											</div>
 										</div>
 									</div>
@@ -112,8 +115,9 @@
 												neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
 												turpis egestas.</div>
 											<div class="item-tabs__action">
-												<a href="#" class="item-tabs__link">www.project.dom</a>
-												<div class="item-tabs__btn btn btn-portfolio">VIEW DETAILS</div>
+												<a href="portfolio-singleproj.html" class="item-tabs__link">www.project.dom</a>
+												<a href="portfolio-singleproj.html" class="item-tabs__btn btn btn-portfolio">VIEW
+													DETAILS</a>
 											</div>
 										</div>
 									</div>
