single blog page

--- a/#source/blog-single.html
+++ b/#source/blog-single.html
@@ -27,6 +27,208 @@
 					</div>
 				</div>
 			</section>
+			<section class="blog__content">
+				<div class="container">
+					<div class="blog__body">
+						<div class="blog__items blog-single">
+							<div class="blog-single__introduction">
+								<div class="post-date__type "><img src="img/icons/doc.png" alt="Post"></div>
+								<div class="blog-single__title">
+									<div class="post-body__title post-body__title--single"><a href="blog-single.html"
+											class="post-body__link">Duis dapibus
+											aliquam mi, eget euismod sem
+											scelerisque ut.</a></div>
+									<div class="post-body__tags tags-post">
+										<div class="tags-post__author">25 May 2013, Posted by <span><a href="#"
+													class="tags-post__link">Admin</a></span> in <span><a href="#"
+													class="tags-post__link">Wordpress</a></span></div>
+										<div class="tags-post__theme"><a href="#" class="tags-post__link">Design</a>, <a href="#"
+												class="tags-post__link">Template</a></div>
+										<div class="tags-post__comments"><a href="#" class="tags-post__link">22</a></div>
+									</div>
+								</div>
+							</div>
+							<div class="blog-single__slider slider-blog">
+								<div class="slider-blog__item">
+									<div class="slider-blog__img"><img src="img/items/pic_gray.png" alt="Some pic"></div>
+									<div class="slider-blog__text">BLOG/PAGE slideshow</div>
+								</div>
+								<div class="slider-blog__item">
+									<div class="slider-blog__img"><img src="img/items/pic_gray.png" alt="Some pic"></div>
+									<div class="slider-blog__text">BLOG/PAGE slideshow</div>
+								</div>
+								<div class="slider-blog__item">
+									<div class="slider-blog__img"><img src="img/items/pic_gray.png" alt="Some pic"></div>
+									<div class="slider-blog__text">BLOG/PAGE slideshow</div>
+								</div>
+							</div>
+							<div class="blog-single__description">
+								<p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna
+									adipiscing iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque.
+									Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+									Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant
+									morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+								<p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna
+									adipiscing iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque.
+									Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+									Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant
+									morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+								<p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna
+									adipiscing iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque.
+									Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+									Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant
+									morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+								<p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna
+									adipiscing iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque.
+									Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+									Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant
+									morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+							</div>
+							<div class="blog-single__phrase">
+								Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing
+								iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque
+								habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur vitae
+								velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant morbi tristique
+								senectus et netus et malesuada fames ac turpis egestas.
+							</div>
+							<div class="slider-blog__share share-blog">
+								<div class="share-blog__title">SHARE</div>
+								<div class="share-blog__items">
+									<a href="" class="share-blog__link facebook fab fa-facebook-f"></a>
+									<a href="" class="share-blog__link google fab fa-google"></a>
+									<a href="" class="share-blog__link twitter fab fa-twitter"></a>
+									<a href="" class="share-blog__link linkedin fab fa-linkedin-in"></a>
+								</div>
+							</div>
+							<div class="blog-single__comments comments-blog">
+								<div class="comments-blog__amount">10 Comments</div>
+								<div class="comments-blog__comment">
+									<div class="comments-blog__info">
+										<div class="comments-blog__details">
+											<div class="comments-blog__author">Jhon Doe</div>
+											<div class="comments-blog__date">26 June 2013, 15:20</div>
+										</div>
+										<div class="comments-blog__btn">
+											<button class="btn-reply">REPLY</button>
+										</div>
+									</div>
+									<div class="comments-blog__text">Duis dapibus aliquam mi, eget euismod sem scelerisque ut.
+										Vivamus at elit quis urna adipiscing iaculis. Curabitur vitae velit in neque dictum
+										blandit.
+										Proin in iaculis neque. </div>
+								</div>
+								<div class="comments-blog__answer">
+									<div class="comments-blog__info">
+										<div class="comments-blog__details">
+											<div class="comments-blog__author">Jhon Doe</div>
+											<div class="comments-blog__date">26 June 2013, 15:25</div>
+										</div>
+									</div>
+									<div class="comments-blog__text">Duis dapibus aliquam mi, eget euismod sem scelerisque ut.
+										Vivamus at elit quis urna adipiscing iaculis. Curabitur vitae velit in neque dictum
+										blandit.
+										Proin in iaculis neque. </div>
+								</div>
+								<div class="comments-blog__comment">
+									<div class="comments-blog__info">
+										<div class="comments-blog__details">
+											<div class="comments-blog__author">Jhon Doe</div>
+											<div class="comments-blog__date">26 June 2013, 7:44</div>
+										</div>
+										<div class="comments-blog__btn">
+											<button class="btn-reply">REPLY</button>
+										</div>
+									</div>
+									<div class="comments-blog__text">Duis dapibus aliquam mi, eget euismod sem scelerisque ut.
+										Vivamus at elit quis urna adipiscing iaculis. Curabitur vitae velit in neque dictum
+										blandit.
+										Proin in iaculis neque. </div>
+								</div>
+							</div>
+							<div class="blog-single__form blog-form">
+								<div class="blog-form__title">Leave a comment</div>
+								<form action="" class="contacts-form__body">
+									<div>
+										<input type="text" name="name">
+										<label for="name">Name</label>
+									</div>
+									<div>
+										<input type="email" name="email">
+										<label for="email">E-mail</label>
+									</div>
+									<div>
+										<input type="text" name="website">
+										<label for="website">Website</label>
+									</div>
+									<div>
+										<textarea name="message" id="" cols="30" rows="10"></textarea>
+									</div>
+									<div>
+										<button class="contacts-form__btn" type="submit">SEND</button>
+									</div>
+								</form>
+							</div>
+						</div>
+						<div class="blog__items blog-settings">
+							<div class="blog__item">
+								<div class="blog-settings__categories">
+									<div class="blog-settings__title section-title">CATEGORIES</div>
+									<a href="#">LOGO DESIGN</a>
+									<a href="#">WEB DESIGN</a>
+									<a href="#">PHOTOGRAPHY</a>
+									<a href="#">WORDPRESS</a>
+									<a href="#">ICONS</a>
+								</div>
+								<div class="blog-settings__recent recent-blog">
+									<div class="blog-settings__title section-title">RECENT POSTS</div>
+									<div class="recent-blog__item">
+										<div class="recent-blog__title"><a href="blog-single.html"><span>⮞</span> Curabitur vitae
+												velit</a></div>
+										<div class="recent-blog__date">25 May 2013</div>
+									</div>
+									<div class="recent-blog__item">
+										<div class="recent-blog__title"><a href="blog-single.html"><span>⮞</span> Vivamus at elit
+												quis urna adipiscing iaculis</a></div>
+										<div class="recent-blog__date">25 May 2013</div>
+									</div>
+									<div class="recent-blog__item">
+										<div class="recent-blog__title"><a href="blog-single.html"><span>⮞</span> Curabitur vitae
+												velit</a></div>
+										<div class="recent-blog__date">25 May 2013</div>
+									</div>
+									<div class="recent-blog__item">
+										<div class="recent-blog__title"><a href="blog-single.html"><span>⮞</span> Vivamus at elit
+												quis urna adipiscing iaculis</a></div>
+										<div class="recent-blog__date">25 May 2013</div>
+									</div>
+								</div>
+								<div class="blog-settings__tags blog-tags">
+									<div class="blog-settings__title section-title">Tags</div>
+									<div class="blog-tags__body">
+										<a href="#" class="blog-tags__link">Maecenas</a>
+										<a href="#" class="blog-tags__link">Nunc</a>
+										<a href="#" class="blog-tags__link">Praesent</a>
+										<a href="#" class="blog-tags__link">Nunc</a>
+										<a href="#" class="blog-tags__link">Praesent</a>
+										<a href="#" class="blog-tags__link">Nunc</a>
+										<a href="#" class="blog-tags__link">Maecenas</a>
+										<a href="#" class="blog-tags__link">Praesent</a>
+										<a href="#" class="blog-tags__link">Nunc</a>
+									</div>
+								</div>
+								<div class="blog-settings__archive blog-archive">
+									<div class="blog-settings__title section-title">ARCHIVE</div>
+									<div class="blog-archive__body">
+										<a href="#">2013</a>
+										<a href="#">2012</a>
+										<a href="#">2011</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('_footer.html',{})
 	</div>
