work on the last page

--- a/#source/blog-single.html
+++ b/#source/blog-single.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="wrapper">
 		@@include('_header.html',{})
-		<main class="about">
+		<main class="blog">
 			<section class="block__header">
 				<div class="container">
 					<div class="block__header-content">
