--- a/#source/index.html
+++ b/#source/index.html
@@ -43,7 +43,7 @@
 							<div class="text-services__subtitle">Ut eleifend libero sed neque rhoncus consequat. Maecenas
 								tincidunt, augue et rutrum condimentum, libero lectus mattis orci, ut commodo. </div>
 						</div>
-						<a href="" class="info-services__btn btn">VIEW MORE</a>
+						<a href="#" class="info-services__btn btn">VIEW MORE</a>
 					</div>
 					<div class="home__services-items">
 						<div class="home__services-column">
