is it the finish?

--- a/#source/features.html
+++ b/#source/features.html
@@ -206,6 +206,16 @@
 									<a href="#tab01" class="tabs-features__links">TAB TITLE</a>
 									<a href="#tab01" class="tabs-features__links">TAB TITLE</a>
 								</div>
+								<div class="tabs-features__triggers tabs-features__triggers--slider slider-triggers">
+									<div class="slider-triggers__item"><a href="#tab01" class="tabs-features__links">TAB
+											TITLE</a></div>
+									<div class="slider-triggers__item"><a href="#tab01" class="tabs-features__links">TAB
+											TITLE</a></div>
+									<div class="slider-triggers__item"><a href="#tab01" class="tabs-features__links">TAB
+											TITLE</a></div>
+									<div class="slider-triggers__item"><a href="#tab01" class="tabs-features__links">TAB
+											TITLE</a></div>
+								</div>
 								<div class="tabs-features__content">
 									<div id="tab01" class="tabs-features__inner">
 										<div class="tabs-features__text">Vivamus eget ante bibendum arcu vehicula ultricies.
@@ -225,7 +235,8 @@
 								</div>
 								<div class="tabs-features__content">
 									<div id="tab02" class="tabs-features__inner-s">
-										<div class="tabs-features__text">Vivamus eget ante bibendum arcu vehicula ultricies.
+										<div class="tabs-features__text tabs-features__text--s">Vivamus eget ante bibendum arcu
+											vehicula ultricies.
 											Integer venenatis mattis nisl, vitae pulvinar dui tempor.Ut eleifend libero sed neque
 											rhoncuUt eleifend libero </div>
 									</div>
@@ -295,8 +306,8 @@
 							</div>
 						</div>
 						<div class="portfolio__tabs-content tabs-content tabs-content-2 feature-proj">
-							<div id="tab-01" class="tabs-content__items">
-								<div class="tabs-content__column-2">
+							<div id="tab-01" class="tabs-content__items ">
+								<div class="tabs-content__column-2 feature-proj-ss">
 									<div class="tabs-content__item-2 item-tabs-2">
 										<div class="item-tabs__img">
 											<img src="img/items/pic_gray.png" alt="Portfolio pic">
@@ -310,7 +321,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="tabs-content__column-2">
+								<div class="tabs-content__column-2 feature-proj-ss">
 									<div class="tabs-content__item-2 item-tabs-2">
 										<div class="item-tabs__img">
 											<img src="img/items/pic_gray.png" alt="Portfolio pic">
@@ -531,7 +542,54 @@
 							</table>
 						</div>
 						<div class="features__tables-items">
-
+							<div class="features__tables-column">
+								<table class="table-small">
+									<tr>
+										<th class="table-small__heading section-title">TR Title</th>
+										<th class="table-small__heading section-title">TR Title</th>
+										<th class="table-small__heading section-title">TR Title</th>
+									</tr>
+									<tr>
+										<td class="table-big__text">Quisque</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+									</tr>
+									<tr>
+										<td class="table-big__text">Quisque</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+									</tr>
+									<tr>
+										<td class="table-big__text">Quisque</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+									</tr>
+								</table>
+							</div>
+							<div class="features__tables-column">
+								<table class="table-small">
+									<tr>
+										<th class="table-small__heading table-small__heading--r section-title">TR Title</th>
+										<th class="table-small__heading table-small__heading--r section-title">TR Title</th>
+										<th class="table-small__heading table-small__heading--r section-title">TR Title</th>
+									</tr>
+									<tr>
+										<td class="table-big__text">Quisque</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+									</tr>
+									<tr>
+										<td class="table-big__text">Quisque</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+									</tr>
+									<tr>
+										<td class="table-big__text">Quisque</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+										<td class="table-big__text">Maecenas a lorem augue</td>
+									</tr>
+								</table>
+							</div>
 						</div>
 					</div>
 				</div>
